dataset1235/2025-2/2318198438/users/1324664027/executions/2601575092_354104495.log
== RUN (2025-08-13 01:35:02)
-- CODE: 
num = int(input("Em que ano estamos?"))

print("Em ",num,"a UFAM completou", num-1909, "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em que ano estamos?Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em que ano estamos?Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em que ano estamos?Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em que ano estamos?Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em que ano estamos?Em  2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:24:44)
-- CODE: 
num = int(input("Em que ano estamos?"))

print("Em ",num,"a UFAM completou", num-1909, "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em que ano estamos?Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em que ano estamos?Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em que ano estamos?Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em que ano estamos?Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em que ano estamos?Em  2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:22:13)
-- CODE: 
num = int(input(Em que ano estamos?))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    num = int(input(Em que ano estamos?))
                    ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    num = int(input(Em que ano estamos?))
                    ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    num = int(input(Em que ano estamos?))
                    ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    num = int(input(Em que ano estamos?))
                    ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    num = int(input(Em que ano estamos?))
                    ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:22:27)
-- CODE: 
num = int(input("Em que ano estamos?"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em que ano estamos?
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em que ano estamos?
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em que ano estamos?
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em que ano estamos?
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em que ano estamos?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 01:25:36)
-- CODE: 
num = int(input("Em que ano estamos?"))

print("Em ",num,"a UFAM completou", num-1909, "anos de fundação.")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em que ano estamos?Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em que ano estamos?Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em que ano estamos?Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em que ano estamos?Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em que ano estamos?Em  2009 a UFAM completou 100 anos de fundação.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
